objects/ASI_MFM_Prefix__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_A_D_Type__c</fullName>
        <label>A&amp;D Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced Pricing</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Accrual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accrual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Bypass_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Bypass Approval used in CAPEX Plan</inlineHelpText>
        <label>Bypass Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_eMail_Subject__c</fullName>
        <formula>IF( RecordType.DeveloperName == &quot;ASI_MFM_CN_Prefix&quot;, IF( BEGINS(Name, &quot;PT&quot;) || BEGINS(Name, &quot;90&quot;) || BEGINS(Name, &quot;IT&quot;), &quot;IT CAPEX/OPEX&quot;, &quot;Consumer A&amp;P&quot; ), NULL)</formula>
        <label>eMail Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Company__c</fullName>
        <label>Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Default_BU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default BU</label>
        <referenceTo>ASI_MFM_BU__c</referenceTo>
        <relationshipLabel>ASI MFM Prefixes</relationshipLabel>
        <relationshipName>ASI_MFM_Prefixes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Default_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ASI MFM Prefixes</relationshipLabel>
        <relationshipName>ASI_MFM_Prefixes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Department__c</fullName>
        <description>For Thailand ASI MFM Use</description>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_MFM_Fiscal_year__c</fullName>
        <label>Fiscal year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>FY</fullName>
                </value>
                <value>
                    <fullName>FY1011</fullName>
                </value>
                <value>
                    <fullName>FY1112</fullName>
                </value>
                <value>
                    <fullName>FY1213</fullName>
                </value>
                <value>
                    <fullName>FY1314</fullName>
                </value>
                <value>
                    <fullName>FY1415</fullName>
                </value>
                <value>
                    <fullName>FY1516</fullName>
                </value>
                <value>
                    <fullName>FY1617</fullName>
                </value>
                <value>
                    <fullName>FY1718</fullName>
                </value>
                <value>
                    <fullName>FY1819</fullName>
                </value>
                <value>
                    <fullName>FY1920</fullName>
                </value>
                <value>
                    <fullName>FY2021</fullName>
                </value>
                <value>
                    <fullName>FY2122</fullName>
                </value>
                <value>
                    <fullName>FY2223</fullName>
                </value>
                <value>
                    <fullName>FY2324</fullName>
                </value>
                <value>
                    <fullName>FY2425</fullName>
                </value>
                <value>
                    <fullName>FY2526</fullName>
                </value>
                <value>
                    <fullName>FY2627</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_For_Local_IT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Local IT?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check when do not want to show in the select prefix page.</description>
        <inlineHelpText>Check the box when do not want to show in the select prefix page.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hong Kong DF</fullName>
                </value>
                <value>
                    <fullName>PRC</fullName>
                </value>
                <value>
                    <fullName>Guam</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>KR</fullName>
                </value>
                <value>
                    <fullName>KD</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Thailand</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Myanmar</fullName>
                </value>
                <value>
                    <fullName>Laos</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>KC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Module__c</fullName>
        <label>Module</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plan</fullName>
                </value>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>CN Vendor PR</fullName>
                    <label>PR(CN Vendor)</label>
                </value>
                <value>
                    <fullName>Direct Payment</fullName>
                </value>
                <value>
                    <fullName>Direct PO</fullName>
                </value>
                <value>
                    <fullName>Dummy Payment</fullName>
                </value>
                <value>
                    <fullName>Dummy PO</fullName>
                </value>
                <value>
                    <fullName>Structure Cost Budget</fullName>
                </value>
                <value>
                    <fullName>Structure Cost Payment</fullName>
                </value>
                <value>
                    <fullName>Structure Cost Accrual</fullName>
                </value>
                <value>
                    <fullName>Structure Cost Rental Payment</fullName>
                </value>
                <value>
                    <fullName>Accrual PO</fullName>
                </value>
                <value>
                    <fullName>POSM Return</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Next_Number__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Next Number</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Over_Spending_Checking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Over Spending Checking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PAF_Prefix__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PAF Prefix</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Parent_Prefix__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Prefix</label>
        <referenceTo>ASI_MFM_Prefix__c</referenceTo>
        <relationshipLabel>ASI MFM Prefixes</relationshipLabel>
        <relationshipName>ASI_MFM_Prefixes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Prefix_Department__c</fullName>
        <label>MFM Prefix Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Luxury</fullName>
                </value>
                <value>
                    <fullName>Trade Marketing</fullName>
                </value>
                <value>
                    <fullName>Community Marketing</fullName>
                </value>
                <value>
                    <fullName>E Commerce</fullName>
                    <label>E-Commerce</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Project_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Code</label>
        <referenceTo>ASI_MFM_Project_Code__c</referenceTo>
        <relationshipLabel>ASI MFM Prefixes</relationshipLabel>
        <relationshipName>ASI_MFM_Prefixes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Region__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Region</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_TR_Rec_Type__c</fullName>
        <description>The value is only allow:
PRADF 
PRJDF</description>
        <label>TR Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_TW_Delivery_Address__c</fullName>
        <label>Delivery Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Tolerance__c</fullName>
        <label>Tolerance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Trade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_country_name__c</fullName>
        <formula>text(Owner:User.ASI_MFM_Country__c)</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <label>Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_MFM_Module__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>A&amp;D</fullName>
                </value>
                <value>
                    <fullName>Allowance &amp; Discount Spending Form</fullName>
                </value>
                <value>
                    <fullName>BC Type Plan</fullName>
                </value>
                <value>
                    <fullName>Budget Plan</fullName>
                </value>
                <value>
                    <fullName>CAPEX</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Handling Charge</fullName>
                </value>
                <value>
                    <fullName>Legal Contract</fullName>
                </value>
                <value>
                    <fullName>Marketing / ROP</fullName>
                </value>
                <value>
                    <fullName>Marketing A&amp;P Plan</fullName>
                </value>
                <value>
                    <fullName>Marketing A&amp;P Plan - Cross Brand</fullName>
                </value>
                <value>
                    <fullName>Mixed Plan</fullName>
                </value>
                <value>
                    <fullName>OPEX</fullName>
                </value>
                <value>
                    <fullName>Structure Cost</fullName>
                </value>
                <value>
                    <fullName>Trade A&amp;P and A&amp;D Plan</fullName>
                </value>
                <value>
                    <fullName>Trade A&amp;P Plan</fullName>
                </value>
                <value>
                    <fullName>Trade Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ASI MFM Prefix</label>
    <listViews>
        <fullName>ASI_JP_IT_Team_ASI_MFM_Prefix</fullName>
        <filterScope>Queue</filterScope>
        <label>ASI JP IT Team</label>
        <queue>ASI_JP_IT_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_CAP_HK_All_Prefix</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_country_name__c</columns>
        <columns>ASI_MFM_Fiscal_year__c</columns>
        <columns>ASI_MFM_Module__c</columns>
        <columns>ASI_MFM_Next_Number__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Prefix__c.ASI_MFM_CAP_Prefix</value>
        </filters>
        <filters>
            <field>ASI_MFM_Module__c</field>
            <operation>equals</operation>
            <value>PO,Payment</value>
        </filters>
        <label>All CAP HK Prefix- PO &amp;  Payment</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_CAP_JP_Prefix</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_country_name__c</columns>
        <columns>ASI_MFM_Module__c</columns>
        <columns>ASI_MFM_Next_Number__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Prefix__c.ASI_MFM_CAP_JP_Prefix</value>
        </filters>
        <label>CAP JP Prefix</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_MFM_CAP_JP_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_CAP_OTH_Prefix</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_country_name__c</columns>
        <columns>ASI_MFM_Fiscal_year__c</columns>
        <columns>ASI_MFM_Module__c</columns>
        <columns>ASI_MFM_Next_Number__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Prefix__c.ASI_MFM_CAP_OTH_Prefix</value>
        </filters>
        <label>All CAP Other Prefix</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_MFM_CAP_TW_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_CAP_Regional_IT_iSpend_Active</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_country_name__c</columns>
        <columns>ASI_MFM_Fiscal_year__c</columns>
        <columns>ASI_MFM_Module__c</columns>
        <columns>ASI_MFM_Next_Number__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <columns>ASI_MFM_Bypass_Approval__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Prefix__c.ASI_MFM_CAP_Prefix</value>
        </filters>
        <filters>
            <field>ASI_MFM_Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Regional IT iSpend - Active</label>
        <language>en_GB</language>
        <sharedTo>
            <roleAndSubordinatesInternal>ASI_PRA_Regional_IT_Director</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_CAP_SG_Prefix</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_country_name__c</columns>
        <columns>ASI_MFM_Fiscal_year__c</columns>
        <columns>ASI_MFM_Module__c</columns>
        <columns>ASI_MFM_Next_Number__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Prefix__c.ASI_MFM_CAP_SG_Prefix</value>
        </filters>
        <label>All CAP SG Prefix</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_MFM_CAP_SG_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_CAP_TH_All_Prefix</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_country_name__c</columns>
        <columns>ASI_MFM_Fiscal_year__c</columns>
        <columns>ASI_MFM_Module__c</columns>
        <columns>ASI_MFM_Next_Number__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Prefix__c.ASI_MFM_CAP_TH_Prefix</value>
        </filters>
        <label>All CAP TH Prefix</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_MFM_CAP_SG_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_HKSC_All_Prefix</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_country_name__c</columns>
        <columns>ASI_MFM_Fiscal_year__c</columns>
        <columns>ASI_MFM_Module__c</columns>
        <columns>ASI_MFM_Next_Number__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Prefix__c.ASI_MFM_SC_Prefix</value>
        </filters>
        <label>All HK SC Prefix</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_MFM_HKSC_Approver</group>
            <group>ASI_MFM_HK_Structure_Cost_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_HK_2021_Plan2</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_country_name__c</columns>
        <columns>ASI_MFM_Fiscal_year__c</columns>
        <columns>ASI_MFM_Prefix_Department__c</columns>
        <columns>ASI_MFM_Module__c</columns>
        <columns>ASI_MFM_Next_Number__c</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>ASI_MFM_Default_BU__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Prefix__c.ASI_MFM_HK_Prefix</value>
        </filters>
        <filters>
            <field>ASI_MFM_Fiscal_year__c</field>
            <operation>equals</operation>
            <value>FY2021</value>
        </filters>
        <filters>
            <field>ASI_MFM_Module__c</field>
            <operation>equals</operation>
            <value>Plan</value>
        </filters>
        <label>HK 2021 Plan</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_MFM_HK_All_Users</group>
            <roleAndSubordinates>ASI_HK_CRM</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_KR_Plan_1819</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_country_name__c</columns>
        <columns>ASI_MFM_Fiscal_year__c</columns>
        <columns>ASI_MFM_Module__c</columns>
        <columns>ASI_MFM_Project_Code__c</columns>
        <columns>ASI_MFM_Next_Number__c</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Prefix__c.ASI_MFM_KR_Prefix</value>
        </filters>
        <filters>
            <field>ASI_MFM_Module__c</field>
            <operation>equals</operation>
            <value>Plan</value>
        </filters>
        <filters>
            <field>ASI_MFM_Fiscal_year__c</field>
            <operation>equals</operation>
            <value>FY2021</value>
        </filters>
        <label>KR_Plan_FY2021</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_SG_Active</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_country_name__c</columns>
        <columns>ASI_MFM_Fiscal_year__c</columns>
        <columns>ASI_MFM_Department__c</columns>
        <columns>ASI_MFM_Module__c</columns>
        <columns>ASI_MFM_Next_Number__c</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Prefix__c.ASI_MFM_SG_Prefix</value>
        </filters>
        <filters>
            <field>ASI_MFM_Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>SG - Active</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_SG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_TW_Plan_Prefix</fullName>
        <columns>ASI_MFM_Fiscal_year__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>NAME</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <columns>ASI_MFM_Next_Number__c</columns>
        <columns>ASI_MFM_Module__c</columns>
        <columns>ASI_MFM_country_name__c</columns>
        <columns>ASI_MFM_Trade__c</columns>
        <columns>ASI_MFM_Over_Spending_Checking__c</columns>
        <columns>ASI_MFM_PAF_Prefix__c</columns>
        <columns>ASI_MFM_Tolerance__c</columns>
        <columns>ASI_MFM_TW_Delivery_Address__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Prefix__c.ASI_MFM_TW_Prefix</value>
        </filters>
        <filters>
            <field>ASI_MFM_Module__c</field>
            <operation>equals</operation>
            <value>Plan</value>
        </filters>
        <filters>
            <field>ASI_MFM_Fiscal_year__c</field>
            <operation>equals</operation>
            <value>FY1920,FY2021</value>
        </filters>
        <label>TW - Plan Prefix</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_MFM_TW_PR</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_country_name__c</columns>
        <columns>ASI_MFM_Module__c</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <columns>ASI_MFM_Fiscal_year__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Plan_Type__c</columns>
        <columns>ASI_MFM_Next_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_MFM_country_name__c</field>
            <operation>equals</operation>
            <value>CN</value>
        </filters>
        <filters>
            <field>ASI_MFM_Module__c</field>
            <operation>notContain</operation>
            <value>Structure Cost</value>
        </filters>
        <label>All CN MFM</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_country_name__c</columns>
        <columns>ASI_MFM_Fiscal_year__c</columns>
        <columns>ASI_MFM_Module__c</columns>
        <columns>ASI_MFM_Next_Number__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_MFM_Module__c</field>
            <operation>equals</operation>
            <value>Payment</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Prefix__c.ASI_MFM_HK_Prefix,ASI_MFM_Prefix__c.ASI_MFM_RM_Prefix,ASI_MFM_Prefix__c.ASI_MFM_TR_Prefix</value>
        </filters>
        <label>All - Payment (HK)</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_PRA_Regional_Marketing</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_CAP_HK_Prefix</fullName>
        <columns>NAME</columns>
        <columns>Plan_Type__c</columns>
        <columns>ASI_MFM_Fiscal_year__c</columns>
        <columns>ASI_MFM_Module__c</columns>
        <columns>ASI_MFM_Next_Number__c</columns>
        <columns>ASI_MFM_Bypass_Approval__c</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Prefix__c.ASI_MFM_CAP_Prefix</value>
        </filters>
        <filters>
            <field>ASI_MFM_Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All CAP HK Prefix</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <label>Prefix</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ASI MFM Prefixes</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_CAP_HK_Prefix</fullName>
        <active>true</active>
        <label>ASI MFM CAP HK Prefix</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CAP_JP_Prefix</fullName>
        <active>true</active>
        <label>ASI MFM CAP JP Prefix</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CAP_OTH_Prefix</fullName>
        <active>true</active>
        <label>ASI MFM CAP Other Prefix</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CAP_Prefix</fullName>
        <active>true</active>
        <label>ASI MFM CAP Prefix</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CAP_SG_Prefix</fullName>
        <active>true</active>
        <label>ASI MFM CAP SG Prefix</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CAP_TH_Prefix</fullName>
        <active>true</active>
        <label>ASI MFM CAP TH Prefix</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CN_Prefix</fullName>
        <active>true</active>
        <label>ASI MFM CN Prefix</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_GF_Prefix</fullName>
        <active>true</active>
        <label>ASI MFM GF Prefix</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_HK_Prefix</fullName>
        <active>true</active>
        <label>ASI MFM HK Prefix</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_JP_Prefix</fullName>
        <active>true</active>
        <label>ASI MFM JP Prefix</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_KR_Prefix</fullName>
        <active>true</active>
        <label>ASI MFM KR Prefix</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_MY_Prefix</fullName>
        <active>true</active>
        <label>ASI MFM MY Prefix</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_PH_DF_Prefix</fullName>
        <active>true</active>
        <label>ASI MFM PH DF Prefix</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_PH_DP_Prefix</fullName>
        <active>true</active>
        <label>ASI MFM PH DP Prefix</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_RM_Prefix</fullName>
        <active>true</active>
        <label>ASI MFM RM Prefix</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_SC_Prefix</fullName>
        <active>true</active>
        <label>ASI MFM SC Prefix</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_SG_Prefix</fullName>
        <active>true</active>
        <label>ASI MFM SG Prefix</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_TH_Prefix</fullName>
        <active>true</active>
        <label>ASI MFM TH Prefix</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_TR_Prefix</fullName>
        <active>true</active>
        <label>ASI MFM TR Prefix</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_TW_Prefix</fullName>
        <active>true</active>
        <label>ASI MFM TW Prefix</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_VN_DF_Prefix</fullName>
        <active>true</active>
        <label>ASI MFM VN DF Prefix</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_VN_DP_Prefix</fullName>
        <active>true</active>
        <label>ASI MFM VN DP Prefix</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_MFM_Fiscal_Year</fullName>
        <active>true</active>
        <errorConditionFormula>ASI_MFM_country_name__c  = &quot;TW&quot;  &amp;&amp; ISPICKVAL( ASI_MFM_Module__c , &quot;Plan&quot;) &amp;&amp;  ISBLANK( text( ASI_MFM_Fiscal_year__c ) )</errorConditionFormula>
        <errorDisplayField>ASI_MFM_Fiscal_year__c</errorDisplayField>
        <errorMessage>Please select fiscal year</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_GF_TRRecordTypeRegionCheck</fullName>
        <active>true</active>
        <description>For Gulf MFM Prefix, TR Record Type defines which region&apos;s customer is available to be selected in Plan and PO</description>
        <errorConditionFormula>AND( 
	CONTAINS( RecordType.DeveloperName , &quot;ASI_MFM_GF&quot;),
	OR( 
		ISBLANK( ASI_MFM_TR_Rec_Type__c ) ,
		NOT(OR(ASI_MFM_TR_Rec_Type__c = &quot;Duty Paid&quot;,ASI_MFM_TR_Rec_Type__c = &quot;Duty Free&quot;, ASI_MFM_TR_Rec_Type__c = &quot;SLM&quot;,
ASI_MFM_TR_Rec_Type__c = &quot;India Duty Free&quot;))
	) 
)</errorConditionFormula>
        <errorDisplayField>ASI_MFM_TR_Rec_Type__c</errorDisplayField>
        <errorMessage>Please select either [Duty Paid], [Duty Free] or [SLM] to define customers available to be selected in Plan and PO</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_KR_Project_Code_Checking</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ASI_MFM_Project_Code__r.ASI_MFM_Code__c  &lt;&gt;  LEFT( Name , 4) , TEXT(ASI_MFM_Module__c) = &apos;Plan&apos;,CONTAINS(RecordType.DeveloperName,  &apos;ASI_MFM_KR&apos;),! INCLUDES($User.BypassTriggers__c,&apos;ASI_MFM_KR_Project_Code_Checking&apos;),!CONTAINS($Profile.Name,&apos;Administrator&apos;))</errorConditionFormula>
        <errorDisplayField>ASI_MFM_Project_Code__c</errorDisplayField>
        <errorMessage>Prefix Error:Cannot change Project Code, because Project Code is not mapped with the name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_Plan_Type</fullName>
        <active>true</active>
        <errorConditionFormula>ASI_MFM_country_name__c  = &quot;TW&quot;  &amp;&amp; ISPICKVAL( ASI_MFM_Module__c , &quot;Plan&quot;) &amp;&amp;  ISBLANK( text(Plan_Type__c) )</errorConditionFormula>
        <errorDisplayField>Plan_Type__c</errorDisplayField>
        <errorMessage>Please select plan type</errorMessage>
    </validationRules>
</CustomObject>